Create API for list permissions.
